# egui_logger

./: Cargo.toml  README.md  rustfmt.toml
examples/: demo.rs  hello.rs
src/: categories.rs  lib.rs  logger.rs  record.rs  tests.rs  types.rs  ui.rs  utils.rs
